<resources>
    <string name="app_name">Content Provider</string>
    <string name="action_settings">Settings</string>
    <string name="lastname">Last name</string>
    <string name="firstname">First name</string>
    <string name="age">Age</string>
    <string name="add">Add a new employee</string>
    <string name="show">Show all employees</string>
    <string name="delete">Delete all employees</string>
</resources>
